# nt8sdk

./: .gitignore  INTEGRATION_SUMMARY.md  PROJECT_STATUS.md  README.md  TRADINGVIEW_SETUP_GUIDE.md  package-structure.md
Ninja8API/NinjaTraderClient/: App.xaml.cs
bridge_references/: nt8-python-sdk.sln
bridge_references/NTPythonIntegratorAddOn/: NTPythonIntegratorAddOn.csproj  NTPythonIntegratorAddOn.sln  NTPythonIntegratorMainAddOn.cs  NTPythonIntegratorPage.xaml  NTPythonIntegratorPage.xaml.cs
bridge_references/Ninja8API/: Ninja8API.sln
bridge_references/reference_addon/: AdditionalReferences.txt  NinZaSuperTrend4U_NT8.cs
config/: ml_config.yaml  trading_config.yaml
csharp/: Build.bat  README.md  README_CSHARP_ADAPTER.md
csharp/NT8PythonAdapter/: AccountDataManager.cs  MarketDataManager.cs  MessageQueue.cs  NT8PythonAdapter.cs  NT8PythonAdapter.csproj  NT8PythonAdapter_Enhanced.cs  NT8PythonAdapter_FileBased.cs  NT8PythonAdapter_Imported.cs
csharp/NT8PythonAdapter_ATI_v2/: Info.xml
csharp/NT8PythonAdapter_v6/: Info.xml
docs/: ATI_DOCUMENTATION.md  AUTO_BREAKEVEN_STATUS.md  BUILD_INSTRUCTIONS.md  CSHARP_IMPLEMENTATION_COMPLETE.md  DATA_FLOW_REFACTOR_PLAN.md  FINAL_SUMMARY.md  FIXES_SUMMARY.md  FIX_PLAN.md  GC_1MIN_DATA_DOCUMENTATION.md  LOG_ANALYSIS_20251126.md  Liquidity_Grab_Strategy.md  MANUAL_BUILD_GUIDE.md  POSITION_MANAGEMENT_REVIEW.md  README_NEW.md  STOP_LOSS_OVERRIDE.md  TRADING_DISCREPANCY_ANALYSIS.md  UPDATES_SUMMARY.md  breakeven_guide.md
python/: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
python/backtests/: backtest_runner.py
python/examples/: account_monitoring.py  advanced_strategy_ex.py  autobreakeven_ex.py  autobreakeven_strategy.py  bracket_order_ex.py  breakeven_demo.py  debug_positions.py  market_data_stream_ex.py  risk_managed_strategy.py  simple_strategy.py
python/nt8/: __init__.py  account.py  advanced_strategy.py  client.py  client_filebased.py  client_hybrid.py  client_managed.py  indicator_client.py  market_data.py  orders.py  protocol.py  risk_management.py  types.py
(+34 files in other folders)
